[package]
name = "shake-that-hand"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm = { version = "0.10.3", features = [] }
bytes = "1.5.0"
alloy-rlp = { version = "0.3.4", features = ["derive"] }
secp256k1 = { version = "0.28.0", features = ["global-context", "rand-std", "recovery", "serde"] }
rand = "0.8.5"
url = "2.5.0"
hex = "0.4.3"
tiny-keccak = { version = "2.0.2", features = ["sha3", "keccak"] }
tokio = { version = "1.35.1", features = ["full", "rt", "rt-multi-thread", "macros"] }
concat-kdf = "0.1.0"
sha2 = "0.10.8"
ctr = "0.9.2"
hmac = "0.12.1"
